dump ItemType and BlockType